"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-11-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-54-channel-01-03:
	  Implemented a connection direction checking policy in
		Object/inst/connection_policy.tcc.
		Correctly rejects mis-connections of channels.  
	  Tested (successfully) new test cases for directional connections.  


	* HACKT-00-01-04-main-00-80-54-channel-01-02:
	  No source revision.  
	  Updated regression test cases, to reflect new footprint size.  


	* HACKT-00-01-04-main-00-80-54-channel-01-01:
	  New branch for updates to channel semantics: type-checking
		and connection checking.
	  AST/instance.cc: reject non-port directional channel declarations.  
	  Added Object/inst/connection_policy.{h,tcc,cc}:
		implements direction-connection semantics for channels
		with additional direction flags per alias,  
		not yet complete.  (Introduces 43 temporary regressions, 
		cause by change in footprint size for channels.)
	  Written and added bunch of test-cases to parser/channel: 
		goal is to pass all of them before branch is over.  


2006-11-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-54:
	  Little source revision: comments only, in preparation for
		upcoming channel- and chp- related changes.  
	  dox/lang documentation updated (same issues noted as NOTES)
	  Test suite updated with template fixes and new test cases.  


2006-11-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-53:
	  Implemented an import preprocessor called 'flatten', which simply
		expands imports recursively, with implicit pragma-once
		behavior (visit files once only).  Does not do *any*
		grammar checking other than what is needed to process
		import directives.  If you want to use cpp directives, 
		then pass the result to cpp, driver does not support