@@ -1,6 +1,6 @@
 # "Make.test-compile"
 #	vi: ft=automake
-#	$Id: Make.test-compile,v 1.2 2006/11/12 05:58:08 fang Exp $
+#	$Id: Make.test-compile,v 1.2.2.1 2006/11/17 04:03:12 fang Exp $
 # This is just a portion of the Make.test-tail template included by
 # Makefile.am's in the test/ directory subtree.  
 # This depends on variables defined in Make.test-tail, and thus, 
@@ -250,10 +250,11 @@ compilewarndiffs: force
 compilefaildiffs: force
 	-$(CAT) *.compilefaildiff > $@
 
-objdiffs: force
-	-$(CAT) *.objdiff > $@
+compileobjdiffs: force
+	-$(CAT) *.compileobjdiff > $@
 
-CHECK_SUMMARIES += compilediffs compilewarndiffs compilefaildiffs objdiffs
+CHECK_SUMMARIES += compilediffs compilewarndiffs \
+	compilefaildiffs compileobjdiffs
 
 
 HACKT_PARSE_TEST_SUBJECTS = \
@@ -282,6 +283,9 @@ HAC_OBJECT_TARGETS += $(HACKT_PARSE_TEST_SUBJECTS:=.haco) \
 
 HACKT_PARSE_FAIL_DUMPS = $(HACKT_PARSE_TEST_FAILURES:=.compiledump)
 $(HACKT_PARSE_FAIL_DUMPS): $(HACKT_EXE)
+
+HACKT_COMPILE_OBJ_DUMPS = $(HACKT_OBJ_TEST_SUBJECTS:=.outdump)
+$(HACKT_COMPILE_OBJ_DUMPS): $(HACKT_EXE)
 
 build-check-local: \
 	$(HACKT_PARSE_TEST_PASSES:=.haco) \
